[tool.poetry]
name = "recursive-visualization"
version = "0.1.0"
description = "Visualize recursive calls."
authors = ["Numerlor <Numerlor@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"

PySide6-Essentials = "6.3.1"

[tool.poetry.dev-dependencies]
typing-extensions = "4.3.0"
taskipy = "1.10.2"

[tool.taskipy.tasks]
pyside-pyi = "pyside6-genpyi all --feature snake_case true_property"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
