[tool.poetry]
name = "recursive-visualization"
version = "0.1.0"
description = "Visualize recursive calls."
authors = ["Numerlor <Numerlor@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"

PySide6-Essentials = "6.3.1"

[tool.poetry.dev-dependencies]
typing-extensions = "4.3.0"
taskipy = "1.10.2"
pre-commit = "2.20"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
pyside-pyi = "pyside6-genpyi all --feature snake_case true_property"

[tool.isort]
atomic = true
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
use_parentheses = true
known_first_party = ["__feature__"]

[tool.black]
target-version = ["py37"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
